Adding two-step sign up with facebook

--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -11,3 +11,5 @@ ADMIN_NAME: First User
 ADMIN_EMAIL: user@example.com
 ADMIN_PASSWORD: changeme
 ROLES: [admin, user, VIP]
+FACEBOOK_KEY: 204327486390146
+FACEBOOK_SECRET: 8c374e0a7d5fcf83632dd7881c0e90df
